--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-transformers==4.41.0 datasets==2.19.0 peft==0.11.1 accelerate==0.30.1 sentencepiece beautifulsoup4 requests
+transformers==4.41.0
+datasets==2.19.0
+peft==0.11.1
+accelerate==0.30.1
+sentencepiece
+beautifulsoup4
+requests
