--- a/configs/lora_config.yaml
+++ b/configs/lora_config.yaml
@@ -1,7 +1,7 @@
 base_model: LeoLM/leo-hessianai-7b
 output_dir: lora-outputs/
 learning_rate: 5e-5
-batch_size: 4   # bei H100 besser 16-32 → 16 ist sicher!
+batch_size: 4   # nicht mehr! bei H100 und 7B → 4-8 geht gut
 num_train_epochs: 3
 logging_steps: 10
 save_steps: 100
