--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 transformers==4.41.0
 datasets==2.19.0
+torch==2.1.2
+bitsandbytes==0.41.0
 peft==0.11.1
 accelerate==0.30.1
-sentencepiece
-beautifulsoup4
-requests
