--- a/configs/lora_config_oer.yaml
+++ b/configs/lora_config_oer.yaml
@@ -1,1 +1,7 @@
-
+base_model: LeoLM/leo-hessianai-7b
+output_dir: lora-outputs/lora_oer
+learning_rate: 5e-5
+batch_size: 1
+num_train_epochs: 3
+logging_steps: 10
+save_steps: 100
