--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-transformers==4.41.0
-datasets==2.19.0
-torch==2.1.2
-bitsandbytes==0.41.0
-peft==0.11.1
-accelerate==0.30.1
+# Core LLM Training Stack
+torch==2.1.2+cu121
+torchvision==0.16.2+cu121
+torchaudio==2.1.2+cu121
+--index-url https://download.pytorch.org/whl/cu121
+
+# HuggingFace Ecosystem
+transformers>=4.38.0
+datasets>=2.18.0
+accelerate>=0.27.2
+peft>=0.9.0
+
+# Optimierungen
+bitsandbytes>=0.43.0  # Optional für 8bit
+flash-attn==2.2.0      # Wichtig: Install mit --no-build-isolation!
+
+# Sonstiges
+pyyaml
+scipy
+einops
