--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-# Core LLM Training Stack
-torch==2.1.2+cu121
-torchvision==0.16.2+cu121
-torchaudio==2.1.2+cu121
---index-url https://download.pytorch.org/whl/cu121
+torch==2.1.2+cu118
+torchvision==0.16.2+cu118
+torchaudio==2.1.2+cu118
+--extra-index-url https://download.pytorch.org/whl/cu118
 
-# HuggingFace Ecosystem
-transformers>=4.38.0
-datasets>=2.18.0
-accelerate>=0.27.2
-peft>=0.9.0
-
-# Optimierungen
-bitsandbytes>=0.43.0  # Optional für 8bit
-flash-attn==2.2.0      # Wichtig: Install mit --no-build-isolation!
-
-# Sonstiges
+transformers==4.39.3
+datasets==2.14.6
+accelerate==0.27.2
+peft==0.7.1
+bitsandbytes==0.42.0
+flash-attn==2.2.0
 pyyaml
-scipy
-einops
